--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>Document</title>
 </head>
 <body>
+
   <p>hello</p>
+  <button id="btn">SHARE</button>
+
 </body>
   <script src="./share.js"></script>
 </html>
